Updated header and footer
Changed the header and footer context to match the ui mockup

--- a/AdminPanel/src/app/@theme/components/header/header.component.scss
+++ b/AdminPanel/src/app/@theme/components/header/header.component.scss
@@ -23,6 +23,10 @@
     cursor: pointer;
   }
 
+  nb-select {
+    margin-left: 1.25rem;
+  }
+
   ::ng-deep nb-search button {
     padding: 0!important;
   }
