Made layout changes

--- a/AdminPanel/src/app/pages/tables/sights-table/sights-table.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/sights-table.component.html
@@ -1,92 +1,105 @@
 <nb-card>
-    <nb-card-header>
-        Sight Table
-    </nb-card-header>
-
     <nb-card-body>
-        <h2>Sights Database</h2>
-<p>This is a list of all sights registerd on the website. You can sort them by the fields below, edit, delete and add sights.</p>
-<div class="space"></div>
-<p-panel header="Search filter" *ngIf="sights">
-    <table>
-        <tbody>
-            <tr>
-                <td><input nbInput fullWidth type="number" placeholder="sightId" name="sightId" [(ngModel)]="filtersightId"></td>
-                <td><input nbInput fullWidth type="text" placeholder="name" name="name" [(ngModel)]="filterName"></td>
-                <td><input nbInput fullWidth type="text" placeholder="info" name="info" [(ngModel)]="filterinfo"></td>
-                <td><input nbInput fullWidth type="text" placeholder="address" name="address" [(ngModel)]="filterAddress"></td>
-                <td><input nbInput fullWidth type="text" placeholder="email" name="email" [(ngModel)]="filterEmail"></td>
-                <td><input nbInput fullWidth type="text" placeholder="tel" name="tel" [(ngModel)]="filterTel"></td>
-            </tr>
-            <tr>
-                <td><input nbInput fullWidth type="text" placeholder="sort" name="sort" [(ngModel)]="filterSort"></td>
-                <td><input nbInput fullWidth type="text" placeholder="page" name="page" [(ngModel)]="filterPage"></td>
-                <td><input nbInput fullWidth type="text" placeholder="length" name="length" [(ngModel)]="filterLength"></td>
-                <td><input nbInput fullWidth type="text" placeholder="dir" name="dir" [(ngModel)]="filterDir"></td>
-                <td><button nbButton label="Filter" (click)="filter()">Filter</button><td>
-            </tr>
-        </tbody>
-    </table>
-</p-panel>
-<div class="space"></div>
-<p-panel header="sights List" *ngIf="sights">
-    <table>
-        <thead>
-            <tr>
-                <td><label class="label">ID</label></td>
-                <td><label class="label">Name</label></td>
-                <td><label class="label">Info</label></td>
-                <td><label class="label">Monument</label></td>
-                <td><label class="label">Stop</label></td>
-                <td><label class="label">Polygon-1</label></td>
-                <td><label class="label">Polygon-2</label></td>
-                <td><label class="label">Polygon-3</label></td>
-                <td><label class="label">Polygon-4</label></td>
-                <td><label class="label">Challenge</label></td>
-                <td></td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let sight of sights">
-                <td><input nbInput fullWidth type="text" disabled name="sightId" value={{sight.sightId}} [(ngModel)]="sight.sightId"></td>
-                <td><input nbInput fullWidth  type="text" name="name" value={{sight.name}} [(ngModel)]="sight.name"></td>
-                <td><input nbInput fullWidth  type="text" name="info" value={{sight.info}} [(ngModel)]="sight.info"></td>
-                <td><input nbInput fullWidth  type="text" name="monument" value={{sight.monument}} [(ngModel)]="sight.monument"></td>
-                <td><input nbInput fullWidth  type="text" name="stop" value={{sight.stop}} [(ngModel)]="sight.stop"></td>
-                <td><input nbInput fullWidth  type="text" name="polygon1" value={{sight.polygon1}} [(ngModel)]="sight.polygon1"></td>
-                <td><input nbInput fullWidth  type="text" name="polygon2" value={{sight.polygon2}} [(ngModel)]="sight.polygon2"></td>
-                <td><input nbInput fullWidth  type="text" name="polygon3" value={{sight.polygon3}} [(ngModel)]="sight.polygon3"></td>
-                <td><input nbInput fullWidth  type="text" name="polygon4" value={{sight.polygon4}} [(ngModel)]="sight.polygon4"></td>
-                <td><input nbInput fullWidth  type="text" name="challenge" value={{sight.challenge}} [(ngModel)]="sight._Challenge"></td>
-                <button nbButton></button>
-                <td><button nbButton [status]="success" (click)="updatesight(sight)">Save</button><td>
-                <td><button nbButton label="Delete" styleClass="ui-button-danger" (click)="deletesight(sight)">Delete</button><td>
-            </tr>
-        </tbody>
-    </table>
-</p-panel>
-<div class="space"></div>
-<p-panel header="Create sight" *ngIf="sights">
-    <table>
-        <tbody>
-            <td><input nbInput fullWidth type="text" disabled name="sightId" [(ngModel)]="sightId"></td>
-            <td><input nbInput fullWidth type="text" name="name" [(ngModel)]="name"></td>
-            <td><input nbInput fullWidth type="text" name="info" [(ngModel)]="info"></td>
-            <td><input nbInput fullWidth type="text" name="address" [(ngModel)]="address"></td>
-            <td><input nbInput fullWidth type="text" name="email" [(ngModel)]="email"></td>
-            <td><input nbInput fullWidth type="text" name="tel" [(ngModel)]="tel"></td>
-            <td><button nbButton label="Create" (click)="createsight(name, info, address, email, tel)">Create</button><td>
-        </tbody>
-    </table>
-</p-panel>
-<div class="space"></div>
-<div class="space"></div>
-<p-message *ngIf="errorMessage" severity="error" text="{{errorMessage}}"></p-message>  
-<p-message *ngIf="successMessage" severity="success" text="{{successMessage}}"></p-message>
-<div class="alert alert-danger" role="alert" *ngIf="errors.length > 0">
-    <div *ngFor="let error of errors">
-    <p-message severity="error" text="{{ error }}"></p-message>  
-    </div>
-</div>
+        <h2>Sight Editor</h2>
+        <p>On this page you can manage the sights available in the app.</p>
+        </nb-card-body>
+    </nb-card>
+<nb-card>
+    <nb-card-header>
+        Edit Sights
+    </nb-card-header>
+    <nb-card-body *ngIf="sights">
+        <table>
+            <thead>
+                <tr>
+                    <td><label class="label">ID</label></td>
+                    <td><label class="label">Name</label></td>
+                    <td><label class="label">Info</label></td>
+                    <td><label class="label">Monument</label></td>
+                    <td><label class="label">Stop</label></td>
+                    <td><label class="label">Polygon-1</label></td>
+                    <td><label class="label">Polygon-2</label></td>
+                    <td><label class="label">Polygon-3</label></td>
+                    <td><label class="label">Polygon-4</label></td>
+                    <td><label class="label">Challenge</label></td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let sight of sights">
+                    <td><input nbInput fullWidth type="text" disabled name="sightId" value={{sight.sightId}}
+                            [(ngModel)]="sight.sightId"></td>
+                    <td><input nbInput fullWidth type="text" name="name" value={{sight.name}} [(ngModel)]="sight.name">
+                    </td>
+                    <td><input nbInput fullWidth type="text" name="info" value={{sight.info}} [(ngModel)]="sight.info">
+                    </td>
+                    <td><input nbInput fullWidth type="text" name="monument" value={{sight.monument}}
+                            [(ngModel)]="sight.monument"></td>
+                    <td><input nbInput fullWidth type="text" name="stop" value={{sight.stop}} [(ngModel)]="sight.stop">
+                    </td>
+                    <td><input nbInput fullWidth type="text" name="polygon1" value={{sight.polygon1}}
+                            [(ngModel)]="sight.polygon1"></td>
+                    <td><input nbInput fullWidth type="text" name="polygon2" value={{sight.polygon2}}
+                            [(ngModel)]="sight.polygon2"></td>
+                    <td><input nbInput fullWidth type="text" name="polygon3" value={{sight.polygon3}}
+                            [(ngModel)]="sight.polygon3"></td>
+                    <td><input nbInput fullWidth type="text" name="polygon4" value={{sight.polygon4}}
+                            [(ngModel)]="sight.polygon4"></td>
+                    <td><input nbInput fullWidth type="text" name="challenge" value={{sight.challenge}}
+                            [(ngModel)]="sight.challenge"></td>
+                    <td><button nbButton fullWidth outline status="success" (click)="updateSight(sight)">Save</button>
+                    <td>
+                    <td><button nbButton fullWidth outline status="danger" (click)="deleteSight(sight)">Delete</button>
+                    <td>
+                </tr>
+            </tbody>
+        </table>
     </nb-card-body>
 </nb-card>
+<nb-card>
+    <nb-card-header>
+        Add Sights
+    </nb-card-header>
+    <nb-card-body *ngIf="sights">
+        <table>
+            <thead>
+                <tr>
+                    <td><label class="label">ID</label></td>
+                    <td><label class="label">Name</label></td>
+                    <td><label class="label">Info</label></td>
+                    <td><label class="label">Monument</label></td>
+                    <td><label class="label">Stop</label></td>
+                    <td><label class="label">Polygon-1</label></td>
+                    <td><label class="label">Polygon-2</label></td>
+                    <td><label class="label">Polygon-3</label></td>
+                    <td><label class="label">Polygon-4</label></td>
+                    <td><label class="label">Challenge</label></td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <td><input nbInput fullWidth type="text" disabled name="sightId" [(ngModel)]="sightId"></td>
+                <td><input nbInput fullWidth type="text" name="name" [(ngModel)]="name"></td>
+                <td><input nbInput fullWidth type="text" name="info" [(ngModel)]="info"></td>
+                <td><input nbInput fullWidth type="text" name="monument" [(ngModel)]="monument"></td>
+                <td><input nbInput fullWidth type="text" name="stop" [(ngModel)]="stop"></td>
+                <td><input nbInput fullWidth type="text" name="polygon1" [(ngModel)]="polygon1"></td>
+                <td><input nbInput fullWidth type="text" name="polygon2" [(ngModel)]="polygon2"></td>
+                <td><input nbInput fullWidth type="text" name="polygon3" [(ngModel)]="polygon3"></td>
+                <td><input nbInput fullWidth type="text" name="polygon4" [(ngModel)]="polygon4"></td>
+                <td><input nbInput fullWidth type="number" name="challenge" [(ngModel)]="challenge"></td>
+                <td><button nbButton outline status="success"
+                        (click)="createSight(name, info, monument, stop, polygon1, polygon2, polygon3, polygon4, challenge)">Create</button>
+                <td>
+            </tbody>
+        </table>
+
+    </nb-card-body>
+</nb-card>
+<nb-alert *ngIf="errorMessage" status="danger">{{errorMessage}}</nb-alert>
+<nb-alert *ngIf="successMessage" status="success">{{successMessage}}</nb-alert>
+<nb-alert status="danger" *ngIf="errors.length > 0">
+    <div *ngFor="let error of errors">
+        <p-message severity="error" text="{{ error }}"></p-message>
+    </div>
+</nb-alert>
