--- a/AdminPanel/src/app/pages/tables/items-table/items-table.component.html
+++ b/AdminPanel/src/app/pages/tables/items-table/items-table.component.html
@@ -1,1 +1,78 @@
-<p>items-table works!</p>
+<nb-card>
+    <nb-card-body>
+        <h2>Item Editor</h2>
+        <p>On this page you can manage the items available in the app.</p>
+    </nb-card-body>
+</nb-card>
+<nb-card>
+    <nb-card-header>
+        Edit Items
+    </nb-card-header>
+    <nb-card-body *ngIf="items">
+        <table>
+            <thead>
+                <tr>
+                    <td><label class="label">ID</label></td>
+                    <td><label class="label">Name</label></td>
+                    <td><label class="label">Location</label></td>
+                    <td><label class="label">Rarity</label></td>
+                    <td><label class="label">Picture</label></td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of items">
+                    <td><input nbInput fullWidth type="text" disabled name="itemId" value={{item.itemId}}
+                            [(ngModel)]="item.itemId"></td>
+                    <td><input nbInput fullWidth type="text" name="name" value={{item.name}} [(ngModel)]="item.name">
+                    </td>
+                    <td><input nbInput fullWidth type="text" name="location" value={{item.location}} [(ngModel)]="item.location">
+                    </td>
+                    <td><input nbInput fullWidth type="text" name="rarity" value={{item.rarity}} [(ngModel)]="item.rarity">
+                    </td>
+                    <td><button nbButton fullWidth outline status="success" (click)="updateItem(item)">Save</button>
+                    <td>
+                    <td><button nbButton fullWidth outline status="danger" (click)="deleteItem(item)">Delete</button>
+                    <td>
+                </tr>
+            </tbody>
+        </table>
+    </nb-card-body>
+</nb-card>
+<nb-card>
+    <nb-card-header>
+        Add Items
+    </nb-card-header>
+    <nb-card-body *ngIf="items">
+        <table>
+            <thead>
+                <tr>
+                    <td><label class="label">ID</label></td>
+                    <td><label class="label">Name</label></td>
+                    <td><label class="label">Location</label></td>
+                    <td><label class="label">Rarity</label></td>
+                    <td><label class="label">Picture</label></td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <td><input nbInput fullWidth type="text" disabled name="itemId" [(ngModel)]="itemId"></td>
+                <td><input nbInput fullWidth type="text" name="name" [(ngModel)]="name"></td>
+                <td><input nbInput fullWidth type="text" name="location" [(ngModel)]="location"></td>
+                <td><input nbInput fullWidth type="text" name="rarity" [(ngModel)]="rarity"></td>
+                <td><input nbInput fullWidth type="text" name="picture" [(ngModel)]="picture"></td>
+                <td><button nbButton outline status="success"
+                        (click)="createItem(name, location, rarity, picture)">Create</button>
+                <td>
+            </tbody>
+        </table>
+
+    </nb-card-body>
+</nb-card>
+<nb-alert *ngIf="errorMessage" status="danger">{{errorMessage}}</nb-alert>
+<nb-alert *ngIf="successMessage" status="success">{{successMessage}}</nb-alert>
+<nb-alert status="danger" *ngIf="errors.length > 0">
+    <div *ngFor="let error of errors">
+        <p-message severity="error" text="{{ error }}"></p-message>
+    </div>
+</nb-alert>
