--- a/AdminPanel/src/app/pages/tables/items-table/items-table.component.scss
+++ b/AdminPanel/src/app/pages/tables/items-table/items-table.component.scss
@@ -5,3 +5,10 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+td {
+  padding-left: 0.15em;
+  padding-right: 0.15em;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
+}
