Added the possibility to save the coordinates

--- a/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
@@ -1,5 +1,5 @@
 <nb-card>
-    <nb-card-header>Enter your name</nb-card-header>
+    <nb-card-header>Polygon editor</nb-card-header>
     <nb-card-body>
         <table>
             <thead>
@@ -11,11 +11,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let coordinate of coordinates; let i">
-                    <td><label class="Coordinate 1"></label></td>
-                    <td><input nbInput fullWidth type="text" name="latitude" value={{coordinate.latitude}}
+                <tr *ngFor="let coordinate of coordinates; index as i">
+                    <td><label class="label">Coordinate {{ i + 1}}</label></td>
+                    <td><input nbInput fullWidth type="number" name="latitude" value={{coordinate.latitude}}
                             [(ngModel)]="coordinate.latitude"></td>
-                    <td><input nbInput fullWidth type="text" name="longitude" value={{coordinate.longitude}}
+                    <td><input nbInput fullWidth type="number" name="longitude" value={{coordinate.longitude}}
                             [(ngModel)]="coordinate.longitude"></td>
                 </tr>
             </tbody>
@@ -23,6 +23,6 @@
     </nb-card-body>
     <nb-card-footer>
         <button class="cancel" nbButton status="danger" (click)="cancel()">Cancel</button>
-        <button nbButton status="success" (click)="submit(name.value)">Submit</button>
+        <button nbButton status="success" (click)="submit()">Submit</button>
     </nb-card-footer>
 </nb-card>
