--- a/AdminPanel/src/app/pages/tables/sights-table/sights-table.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/sights-table.component.html
@@ -34,7 +34,7 @@
                             [(ngModel)]="sight.monument"></td>
                     <td><input nbInput fullWidth type="text" name="stop" value={{sight.stop}} [(ngModel)]="sight.stop">
                     </td>
-                    <td><button nbButton fullWidth (click)="openPolygonDialog(sight)">Edit</button>
+                    <td><button nbButton fullWidth (click)="openEditPolygonDialog(sight)">Edit</button>
                     </td>
                     <td><input nbInput fullWidth type="text" name="challenge" value={{sight.challenge}}
                             [(ngModel)]="sight.challenge"></td>
@@ -71,13 +71,10 @@
                 <td><input nbInput fullWidth type="text" name="info" [(ngModel)]="info"></td>
                 <td><input nbInput fullWidth type="text" name="monument" [(ngModel)]="monument"></td>
                 <td><input nbInput fullWidth type="text" name="stop" [(ngModel)]="stop"></td>
-                <td><input nbInput fullWidth type="text" name="polygon1" [(ngModel)]="polygon1"></td>
-                <td><input nbInput fullWidth type="text" name="polygon2" [(ngModel)]="polygon2"></td>
-                <td><input nbInput fullWidth type="text" name="polygon3" [(ngModel)]="polygon3"></td>
-                <td><input nbInput fullWidth type="text" name="polygon4" [(ngModel)]="polygon4"></td>
-                <td><input nbInput fullWidth type="number" name="challenge" [(ngModel)]="challenge"></td>
+                <td><button nbButton fullWidth (click)="openNewPolygonDialog()">Add</button></td>
+                <td><input nbInput fullWidth type="number" name="challenges" [(ngModel)]="challenges"></td>
                 <td><button nbButton outline status="success"
-                        (click)="createSight(name, info, monument, stop, polygon1, polygon2, polygon3, polygon4, challenge)">Create</button>
+                        (click)="createSight(name, info, monument, stop, challenges)">Create</button>
                 <td>
             </tbody>
         </table>
