--- a/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
@@ -22,7 +22,7 @@
         </table>
     </nb-card-body>
     <nb-card-footer>
-        <button class="cancel" nbButton status="danger" (click)="cancel()">Cancel</button>
-        <button nbButton status="success" (click)="submit()">Submit</button>
+        <td><button class="cancel" nbButton status="danger" (click)="cancel()">Cancel</button></td>
+        <td><button nbButton status="success" (click)="submit()">Submit</button></td>
     </nb-card-footer>
 </nb-card>
