Added a map to setup a polygon
Added angular google maps integration
Added possibility to add 4 points to the map
Auto adds pointers based on coordinates
Possibility to move pointer with auto update

--- a/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
@@ -20,6 +20,20 @@
                 </tr>
             </tbody>
         </table>
+        <p></p>
+        <agm-map [latitude]="lat" [longitude]="lng" [disableDefaultUI]="true" [zoom]="zoom" (mapClick)="mapClicked($event)">
+
+            <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m.label, i)"
+                [latitude]="m.lat" [longitude]="m.lng" [label]="m.label" [markerDraggable]="m.draggable"
+                (dragEnd)="markerDragEnd(m, $event)">
+
+                <agm-info-window>
+                    <strong>{{ m.lat }}, {{ m.lng }}</strong>
+                </agm-info-window>
+
+            </agm-marker>
+
+        </agm-map>
     </nb-card-body>
     <nb-card-footer>
         <td><button class="cancel" nbButton status="danger" (click)="cancel()">Cancel</button></td>
