--- a/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/polygon-dialog-component/polygon-dialog-component.component.html
@@ -21,7 +21,8 @@
             </tbody>
         </table>
         <p></p>
-        <agm-map [latitude]="lat" [longitude]="lng" [disableDefaultUI]="true" [zoom]="zoom" (mapClick)="mapClicked($event)">
+        <agm-map [latitude]="lat" [longitude]="lng" [disableDefaultUI]="true" [zoom]="zoom"
+            (mapClick)="mapClicked($event)">
 
             <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m.label, i)"
                 [latitude]="m.lat" [longitude]="m.lng" [label]="m.label" [markerDraggable]="m.draggable"
