--- a/AdminPanel/src/app/pages/tables/sights-table/sights-table.component.html
+++ b/AdminPanel/src/app/pages/tables/sights-table/sights-table.component.html
@@ -37,9 +37,9 @@
                     <td><button nbButton fullWidth (click)="openEditPolygonDialog(sight)">Edit</button>
                     </td>
 
-                    <td *ngFor="let challenge of sight.challenges">
-                        <input nbInput fullWidth type="number" name="challenge" value={{challenge.challengeId}}>
+                    <td><button nbButton fullWidth (click)="openChallengeSelector(sight.challenges)">Edit</button>
                     </td>
+
                     <td><button nbButton fullWidth outline status="success" (click)="updateSight(sight)">Save</button>
                     <td>
                     <td><button nbButton fullWidth outline status="danger" (click)="deleteSight(sight)">Delete</button>
@@ -74,9 +74,9 @@
                 <td><input nbInput fullWidth type="text" name="monument" [(ngModel)]="monument"></td>
                 <td><input nbInput fullWidth type="text" name="stop" [(ngModel)]="stop"></td>
                 <td><button nbButton fullWidth (click)="openNewPolygonDialog()">Add</button></td>
-                <td><input nbInput fullWidth type="number" name="challenges" [(ngModel)]="challenges"></td>
+                <td><button nbButton fullWidth (click)="openChallengeSelector()">Add</button></td>
                 <td><button nbButton outline status="success"
-                        (click)="createSight(name, info, monument, stop, challenges)">Create</button>
+                        (click)="createSight(name, info, monument, stop)">Create</button>
                 <td>
             </tbody>
         </table>
