--- a/AdminPanel/src/app/pages/tables/items-table/location-dialog-component/location-dialog-component.component.html
+++ b/AdminPanel/src/app/pages/tables/items-table/location-dialog-component/location-dialog-component.component.html
@@ -23,17 +23,12 @@
         <p></p>
         <agm-map [latitude]="lat" [longitude]="lng" [disableDefaultUI]="true" [zoom]="zoom"
             (mapClick)="mapClicked($event)">
-
-            <agm-marker
-                [latitude]="marker.lat" [longitude]="marker.lng" [label]="marker.label" [markerDraggable]="marker.draggable"
-                (dragEnd)="markerDragEnd(marker, $event)">
-
+            <agm-marker [latitude]="marker.lat" [longitude]="marker.lng" [label]="marker.label"
+                [markerDraggable]="marker.draggable" (dragEnd)="markerDragEnd(marker, $event)">
                 <agm-info-window>
                     <strong>{{ marker.lat }}, {{ marker.lng }}</strong>
                 </agm-info-window>
-
             </agm-marker>
-
         </agm-map>
     </nb-card-body>
     <nb-card-footer>
