--- a/AdminPanel/src/app/pages/tables/items-table/items-table.component.html
+++ b/AdminPanel/src/app/pages/tables/items-table/items-table.component.html
@@ -32,12 +32,12 @@
                     <td><input nbInput fullWidth type="text" name="picture" value={{item.picture}}
                             [(ngModel)]="item.picture">
                     </td>
-                    <td><button nbButton fullWidth (click)="openEditLocationDialog(item)">Edit</button>
+                    <td><button nbButton fullWidth outline (click)="openEditLocationDialog(item)">Edit</button>
                     </td>
                     <td><button nbButton fullWidth outline status="success" (click)="updateItem(item)">Save</button>
-                    <td>
+                    </td>
                     <td><button nbButton fullWidth outline status="danger" (click)="deleteItem(item)">Delete</button>
-                    <td>
+                    </td>
                 </tr>
             </tbody>
         </table>
@@ -64,10 +64,10 @@
                 <td><input nbInput fullWidth type="text" name="name" [(ngModel)]="name"></td>
                 <td><input nbInput fullWidth type="text" name="rarity" [(ngModel)]="rarity"></td>
                 <td><input nbInput fullWidth type="text" name="picture" [(ngModel)]="picture"></td>
-                <td><button nbButton fullWidth (click)="openNewLocationDialog()">Edit</button></td>
+                <td><button nbButton outline fullWidth (click)="openNewLocationDialog()">Edit</button></td>
                 <td><button nbButton outline status="success"
                         (click)="createItem(name, rarity, picture)">Create</button>
-                <td>
+                </td>
             </tbody>
         </table>
     </nb-card-body>
